<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.home.HomeFragment"
    android:background="@color/bg">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp">

        <TextView
            android:id="@+id/text_main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/text_title_size"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/home_main_title"/>

        <TextView
            android:id="@+id/text_main_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/text_main_title"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            android:textColor="@color/home_text_color"
            android:textSize="@dimen/text_description_size"
            android:text="@string/home_main_description"/>

        <ImageView
            android:id="@+id/image_divider1"
            android:layout_width="80dp"
            android:layout_height="5dp"
            app:layout_constraintTop_toBottomOf="@+id/text_main_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:src="@drawable/rounded_button"/>

        <RelativeLayout
            android:id="@+id/btn_report_problem"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@+id/image_divider1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/rounded_button" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/home_btn_report_problem"
                android:textColor="@color/white"
                android:textSize="@dimen/text_title_size"
                android:textStyle="bold" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/image_divider2"
            android:layout_width="80dp"
            android:layout_height="5dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_report_problem"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:src="@drawable/rounded_button"/>

        <TextView
            android:id="@+id/text_categories_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/image_divider2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/text_title_size"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/home_categories_title"/>

        <TextView
            android:id="@+id/text_categories_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/home_categories_description"
            android:textColor="@color/home_text_color"
            android:textSize="@dimen/text_description_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_categories_title" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_categories"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_categories_description"/>

        <ImageView
            android:id="@+id/image_divider3"
            android:layout_width="80dp"
            android:layout_height="5dp"
            app:layout_constraintTop_toBottomOf="@+id/recycler_categories"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:src="@drawable/rounded_button"/>

        <TextView
            android:id="@+id/text_waste_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/image_divider3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/text_title_size"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/home_waste_title"/>

        <RelativeLayout
            android:id="@+id/btn_show_waste_map"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@+id/text_waste_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20sp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/rounded_button"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/home_waste_maps"
                android:textColor="@color/white"
                android:textSize="@dimen/text_title_size"
                android:textStyle="bold" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>