<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.contact.ContactFragment"
    android:padding="20sp">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-20dp"
        android:layout_marginStart="-20dp"
        android:layout_marginEnd="-20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_contact_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:text="@string/fragment_contact_title"
        android:textStyle="bold"
        android:textColor="@color/text_color_primary"
        android:textSize="@dimen/text_title_size"/>

    <TextView
        android:id="@+id/text_contact_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_contact_title"
        android:layout_marginTop="10sp"
        android:text="Lorem ipsum dolor sit amet, consec tetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor."
        android:textStyle="bold"
        android:textColor="@color/text_desc_color"
        android:textSize="@dimen/text_description_size"/>

    <TextView
        android:id="@+id/text_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:text="@string/contact_phone_number"
        android:textColor="@color/contacts_text_color"
        android:textSize="@dimen/text_contacts"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_contact_description" />

    <TextView
        android:id="@+id/text_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/contact_email"
        android:textColor="@color/contacts_text_color"
        android:textSize="@dimen/text_contacts"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_phone_number" />

    <TextView
        android:id="@+id/text_web_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/contact_web"
        android:textColor="@color/contacts_text_color"
        android:textSize="@dimen/text_contacts"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_email" />

    <ImageView
        android:id="@+id/btn_facebook"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginTop="20sp"
        android:src="@drawable/facebook_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_instagram"
        app:layout_constraintTop_toBottomOf="@id/text_web_page"/>

    <ImageView
        android:id="@+id/btn_instagram"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginTop="20sp"
        android:src="@drawable/instagram_logo"
        app:layout_constraintStart_toEndOf="@id/btn_facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_web_page"/>

</androidx.constraintlayout.widget.ConstraintLayout>